fix: extra padding
Add a bit of extra padding to the content card.

--- a/src/styles.css
+++ b/src/styles.css
@@ -68,7 +68,7 @@ html {
   margin: 25px auto;
   border-radius: 10px;
   color: var(--light-purple);
-  padding: 10px 15px;
+  padding: 10px 20px;
   background-image: var(--border-img);
   background-size: 98% 100%;
   background-repeat: no-repeat;
